...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:scaleType="fitCenter"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/name_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/name_profile" />

            <EditText
                android:id="@+id/name_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/username_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/username_profile" />

            <EditText
                android:id="@+id/username_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/email_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/email_profile" />

            <EditText
                android:id="@+id/email_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/age_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/age_profile" />

            <EditText
                android:id="@+id/age_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/description_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/description_profile" />

            <EditText
                android:id="@+id/description_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/occupation_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/occupation_profile" />

            <EditText
                android:id="@+id/occupation_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
