...
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/settings_name" />

            <EditText
                android:id="@+id/name_edittext_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/settings_email" />

            <EditText
                android:id="@+id/email_edittext_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/settings_reminderTime" />

            <EditText
                android:id="@+id/remindertime_edittext_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/settings_maxdistance" />

            <EditText
                android:id="@+id/maxDistance_edittext_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>
...
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/setting_gender"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/gender_edittext_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
...
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/setting_status"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/status_edittext_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
...
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/setting_agemin"
                android:imeOptions="flagNoExtractUi"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/agemin_edittext_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
...
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/setting_agemax"
                android:imeOptions="flagNoExtractUi"
                android:layout_weight="0"/>

            <EditText
                android:id="@+id/agemax_edittext_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"
...
