...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_top20"
            android:inputType="text"
            android:textColor="#5B0000"
            android:hint="@string/name"
            android:imeOptions="flagNoExtractUi"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_top20"
            android:textColor="#5B0000"
            android:inputType="text"
            android:hint="@string/username"
            android:imeOptions="flagNoExtractUi"
            android:layout_weight="1"/>

    </LinearLayout>
        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_top20"
            android:textColor="#5B0000"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
...
            android:layout_height="wrap_content"
            tools:context=".TableLayoutExampleActivity"
            android:shrinkColumns="2"
            android:stretchColumns="0,1">
        <TableRow>
            <EditText
                android:id="@+id/birthday_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_marginTop="@dimen/textview_top20"
                android:textColor="#5B0000"
                android:hint="@string/dob"
...
                   />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/age_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_marginTop="@dimen/textview_top20"
            android:textColor="#5B0000"
            android:hint="@string/age"
            android:imeOptions="flagNoExtractUi"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_top20"
            android:textColor="#5B0000"
            android:inputType="text"
            android:hint="@string/description"
...
