...
    <string name="description">Enter Description</string>
    <string name="display_description">Description</string>
    <string name="occupation">Enter Occupation</string>
    <string name="display_occupation">Occupation</string>


    <string name="name_profile">Name:</string>
    <string name="username_profile">User Name:</string>
    <string name="age_profile">Age:</string>
    <string name="email_profile">Email:</string>
    <string name="dob_profile">DOB: </string>
    <string name="description_profile">Description:</string>
    <string name="occupation_profile">Occupation:</string>



    <string name="signup">Sign-up</string>
   <string name="register_form_text">Sign-up</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
...
